Finally I figured out how to recover auth. when waking up :-D

--- a/MicrosoftGraphAuthSample/MicrosoftGraphAuthSample.csproj
+++ b/MicrosoftGraphAuthSample/MicrosoftGraphAuthSample.csproj
@@ -91,6 +91,12 @@
     <Reference Include="Microsoft.Experimental.IdentityModel.Clients.ActiveDirectory.Platform">
       <HintPath>..\packages\Microsoft.Experimental.IdentityModel.Clients.ActiveDirectory.4.0.209160138-alpha\lib\Xamarin.iOS10\Microsoft.Experimental.IdentityModel.Clients.ActiveDirectory.Platform.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="PerpetualEngine.SimpleStorage.iOS-Unified">
+      <HintPath>..\packages\SimpleStorage.1.4.1\lib\Xamarin.iOS10\PerpetualEngine.SimpleStorage.iOS-Unified.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json" />
