--- a/MicrosoftGraphAuthSample/packages.config
+++ b/MicrosoftGraphAuthSample/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Experimental.IdentityModel.Clients.ActiveDirectory" version="4.0.209160138-alpha" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="xamarinios10" />
+  <package id="SimpleStorage" version="1.4.1" targetFramework="xamarinios10" />
 </packages>
